--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,18 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 
+  <!--comnt-->
+  <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+
    <!-- Bootstrap CSS -->
    <link href="assets/dashboard/bootstrap.min.css" rel="stylesheet">
    <!-- bootstrap theme -->
-   <link href="assets/dashboard/css/bootstrap-theme.css" rel="stylesheet">
+   <link href="assets/dashboarbootstrap.min.cssd/css/bootstrap-theme.css" rel="stylesheet">
    <!--external css-->
    <!-- font icon -->
    <link href="assets/dashboard/css/elegant-icons-style.css" rel="stylesheet" />
@@ -31,8 +39,11 @@
    <link href="assets/dashboard/css/style-responsive.css" rel="stylesheet" />
    <link href="assets/dashboard/css/xcharts.min.css" rel=" stylesheet">
    <link href="assets/dashboard/css/jquery-ui-1.10.4.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
-<body>
+<body class="mat-typography">
   <!-- javascripts -->
   <script src="assets/dashboard/js/jquery.js"></script>
   <script src="assets/dashboard/js/jquery-ui-1.10.4.min.js"></script>
